syntax = "proto3";
package upalchowdhury.supplychain.supplychain;

option go_package = "github.com/upalchowdhury/supplychain/x/supplychain/types";



message NewContract {
    string dealId = 1;
    string contractId = 2; 
    string consumer = 3; 
    string desc = 4; 
    uint32 ownerETA = 5; 
    uint32 vendorETA = 6; 
    string status = 7;
    uint64 fees = 8;
    string expiry = 9; 
    uint32 shippingDelay = 10;
    string startTime = 11;
    uint32 deliveryDelay = 12;
  }